@@ -133,6 +133,8 @@
 #define C_SYSTEM_FORCE_LANGUAGE_DEFAULT _T("")
 #define C_SYSTEM_NO_INDEX _T("dont_use_pdh_index")
 #define C_SYSTEM_NO_INDEX_DEFAULT 0
+#define C_SYSTEM_IGNORE_COLLECTION _T("debug_skip_data_collection")
+#define C_SYSTEM_IGNORE_COLLECTION_DEFAULT 0
 
 #define C_SYSTEM_MEM_PAGE_LIMIT _T("MemoryCommitLimit")
 #define C_SYSTEM_MEM_PAGE_LIMIT_DEFAULT _T("\\Memory\\Commit Limit")
